--- a/src/Textarea/textArea.css
+++ b/src/Textarea/textArea.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: #f3d9d9;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +16,7 @@
     width: 70%;
     height: 90%;
     background-color: white;
-    box-shadow: 0px 1px 10px rgba(10, 10, 10, 0.2);
+    box-shadow: 0px 1px 10px rgba(15, 15, 20, 0.8);
     overflow: auto;
   }
   
